hphp/test/slow/meth-caller-bad-meth.php.expectf

Fatal error: Method name must be a literal string in %s/meth-caller-bad-meth.php on line 6
